--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body {
 /* Hero section background image */
 .hero {
   height: 100vh;
-  background-image: url("../images/bg.jpg.jpg");
+  background-image: url("../images/cs.JPG");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -78,7 +78,7 @@ footer .social-icons a {
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
-  background-image: url("../images/contact-bg.jpeg");
+  background-image: url("../images/contact.jpg");
 }
 
 @media screen and (max-width: 990px) {
